# UnrealLauncher

./: .dockerignore  .editorconfig  .env.example  .eslintcache  .gitattributes  .gitignore  .prettierignore  .prettierrc.yaml  BUG_FIXES_SUMMARY.md  BUILD.md  BUILD_INSTRUCTIONS.md  CHANGELOG.json  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DONATE.md  Dockerfile  ELECTRON_UPDATER_GUIDE.md  LICENSE  PROJECT_ANALYSIS.md  README.md  SECURITY.md  WARNINGS_FIXES_SUMMARY.md  aboutpage.md  build-admin.ps1  build-docker.ps1  build-docker.sh  build-installer.bat  build-installer.ps1  build-linux.sh  debnaath.json  dev-app-update.yml  electron-builder.yml  electron.vite.config.ts  eslint.config.mjs  generate_test_project.js  index.html  lint_report.txt  package-lock.json  package.json  (+5 more)
.github/workflows/: ci.yml  codeql-analysis.yml
TestProject/: TestProject.uproject
docker/: .dockerignore  Dockerfile  build-docker.ps1  build-docker.sh
docs/: BUILD.md  BUILD_INSTRUCTIONS.md  DONATE.md  IMPROVEMENT_ANALYSIS.md
electron/: main-backup.js  main.js  preload.cjs  preload.js
native/: Cargo.toml  build.rs  index.node  index.win32-x64-msvc.node
native/dist2/: index.win32-x64-msvc.node
native/src/: lib.rs
resources/: unreal_launcher_tracer
scripts/: build-admin.ps1  build-installer.bat  build-installer.ps1  build-linux.sh  buildNativeHelper.js  copyTracer.js  testScanner.ts
src/: App.tsx  config.example.ts  config.ts  index.css  main.tsx
src/components/: PageTitlebar.tsx  Sidebar.tsx  Titlebar.tsx
tracer/: Cargo.toml  build.rs
tracer/src/: diag.rs  main.rs
(+373 files in other folders)
