[package]
name = "unreal-launcher-tracer"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "unreal_launcher_tracer"
path = "src/main.rs"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sysinfo = "0.33"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58", features = [
    "Win32_System_Threading",
    "Win32_System_ProcessStatus",
    "Win32_Foundation",
    "Win32_Security",
] }

[build-dependencies]
[target.'cfg(target_os = "windows")'.build-dependencies]
winres = "0.1"

[profile.release]
lto = true
codegen-units = 1
strip = true
